fix: add dto for public path update to fix reactive flux string deserialization
